include/libmpq/mpq.h


#define LIBMPQ_ERROR_OPEN (-1)            
#define LIBMPQ_ERROR_CLOSE (-2)           
#define LIBMPQ_ERROR_SEEK (-3)            
#define LIBMPQ_ERROR_READ (-4)            
#define LIBMPQ_ERROR_WRITE (-5)           
#define LIBMPQ_ERROR_MALLOC (-6)          
#define LIBMPQ_ERROR_FORMAT (-7)          
#define LIBMPQ_ERROR_NOT_INITIALIZED (-8) 
#define LIBMPQ_ERROR_SIZE (-9)            
#define LIBMPQ_ERROR_EXIST (-10)          
#define LIBMPQ_ERROR_DECRYPT (-11)        
#define LIBMPQ_ERROR_UNPACK (-12)         
typedef struct mpq_archive mpq_archive_s;
typedef struct mpq_writer mpq_writer_s;
#define LIBMPQ_ARCHIVE_VERSION_ONE 0
#define LIBMPQ_ARCHIVE_VERSION_TWO 1
#define LIBMPQ_ARCHIVE_CREATE_LISTFILE 0x00000001u
#define LIBMPQ_ARCHIVE_CREATE_COMPRESSION_EXTENDED 0x00000002u
#define LIBMPQ_ATTRIBUTE_CRC32 0x01u
#define LIBMPQ_ATTRIBUTE_FILETIME 0x02u
#define LIBMPQ_ATTRIBUTE_MD5 0x04u
#define LIBMPQ_ATTRIBUTE_PATCH_BIT 0x08u
#define LIBMPQ_VERIFY_SECTOR_CRC 0x00000001u
#define LIBMPQ_VERIFY_FILE_CRC32 0x00000002u
#define LIBMPQ_VERIFY_FILE_MD5 0x00000004u
#define LIBMPQ_VERIFY_ALL                                                                          \
    (LIBMPQ_VERIFY_SECTOR_CRC | LIBMPQ_VERIFY_FILE_CRC32 | LIBMPQ_VERIFY_FILE_MD5)
typedef int32_t libmpq_compression_policy_t;
enum
{
    LIBMPQ_COMPRESSION_POLICY_STANDARD = 0,
    LIBMPQ_COMPRESSION_POLICY_EXTENDED = 1
};
#define LIBMPQ_FILE_FLAG_IMPLODE 0x00000100u
#define LIBMPQ_FILE_FLAG_COMPRESS 0x00000200u
#define LIBMPQ_FILE_FLAG_ENCRYPTED 0x00010000u
#define LIBMPQ_FILE_FLAG_SINGLE 0x01000000u
#define LIBMPQ_FILE_FLAG_SECTOR_CRC 0x04000000u
#define LIBMPQ_FILE_FLAG_LOCALE 0x00000000u
#define LIBMPQ_COMPRESSION_HUFFMAN 0x01u
#define LIBMPQ_COMPRESSION_ZLIB 0x02u
#define LIBMPQ_COMPRESSION_PKZIP 0x08u
#define LIBMPQ_COMPRESSION_BZIP2 0x10u
#define LIBMPQ_COMPRESSION_WAVE_MONO 0x40u
#define LIBMPQ_COMPRESSION_WAVE_STEREO 0x80u
#define LIBMPQ_COMPRESSION_LZMA 0x00000100u
#define LIBMPQ_COMPRESSION_SPARSE 0x20u
typedef struct
{
    uint32_t version;     
    uint32_t max_files;   
    uint32_t sector_size; 
    uint32_t flags;       
    uint32_t attributes;  
} mpq_archive_create_options_s;
typedef struct mpq_file_options
{
    uint32_t flags;             
    uint32_t compression_first; 
    uint32_t compression_next;  
    uint16_t locale;            
    uint16_t platform;          
} mpq_file_options_s;
typedef struct
{
    uint32_t flags;
    uint32_t crc32;
    uint64_t filetime;
    uint8_t md5[16];
    int32_t patch_bit;
    uint8_t reserved[4]; 
} mpq_file_attributes_s;
extern LIBMPQ_API int32_t libmpq__archive_attributes(mpq_archive_s *mpq_archive, uint32_t *flags);
extern LIBMPQ_API int32_t libmpq__file_attributes(
    mpq_archive_s *mpq_archive, uint32_t file_number, mpq_file_attributes_s *attributes
);
extern LIBMPQ_API int32_t libmpq__file_verify(
    mpq_archive_s *archive, uint32_t file_number, uint32_t verify_flags, uint32_t *mismatches
);
extern LIBMPQ_API int32_t libmpq__block_verify(
    mpq_archive_s *archive, uint32_t file_number, uint32_t block_number, uint32_t *checksum,
    uint32_t *mismatches
);
extern LIBMPQ_API int32_t libmpq__writer_timestamp(mpq_writer_s *writer, uint64_t filetime);
typedef int64_t libmpq__off_t;
extern LIBMPQ_API const char *libmpq__version(void);
extern LIBMPQ_API const char *libmpq__strerror(int32_t return_code);
extern LIBMPQ_API int32_t libmpq__archive_compression_allowed(
    uint32_t archive_version, uint32_t compression_mask, libmpq_compression_policy_t policy
);
extern LIBMPQ_API int32_t libmpq__archive_open(
    mpq_archive_s **mpq_archive, const char *mpq_filename, libmpq__off_t archive_offset
);
extern LIBMPQ_API int32_t libmpq__archive_open_mpqe(
    mpq_archive_s **mpq_archive, const char *mpq_filename, libmpq__off_t archive_offset,
    const uint8_t *auth_code, size_t auth_code_size
);
extern LIBMPQ_API int32_t libmpq__archive_create(
    mpq_archive_s **mpq_archive, const char *mpq_filename,
    const mpq_archive_create_options_s *options
);
extern LIBMPQ_API int32_t libmpq__archive_create_mpqe(
    mpq_archive_s **mpq_archive, const char *mpqe_filename, const uint8_t *auth_code,
    size_t auth_code_size, const mpq_archive_create_options_s *options
);
extern LIBMPQ_API int32_t libmpq__writer_begin(
    mpq_archive_s *mpq_archive, const char *filename, libmpq__off_t unpacked_size,
    const mpq_file_options_s *options, mpq_writer_s **writer
);
extern LIBMPQ_API int32_t
libmpq__writer_write(mpq_writer_s *writer, const uint8_t *buffer, libmpq__off_t size);
extern LIBMPQ_API int32_t libmpq__writer_finish(mpq_writer_s *writer);
extern LIBMPQ_API int32_t libmpq__archive_add_data(
    mpq_archive_s *mpq_archive, const char *filename, const uint8_t *buffer, libmpq__off_t size,
    const mpq_file_options_s *options
);
extern LIBMPQ_API int32_t libmpq__archive_add_path(
    mpq_archive_s *mpq_archive, const char *filename, const char *source_path,
    const mpq_file_options_s *options
);
extern LIBMPQ_API int32_t libmpq__archive_clone(mpq_archive_s **clone, mpq_archive_s *source);
extern LIBMPQ_API int32_t libmpq__archive_close(mpq_archive_s *mpq_archive);
extern LIBMPQ_API int32_t
libmpq__archive_size_packed(mpq_archive_s *mpq_archive, libmpq__off_t *packed_size);
extern LIBMPQ_API int32_t
libmpq__archive_size_unpacked(mpq_archive_s *mpq_archive, libmpq__off_t *unpacked_size);
extern LIBMPQ_API int32_t libmpq__archive_offset(mpq_archive_s *mpq_archive, libmpq__off_t *offset);